--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,14 +14,32 @@
         <img src="assets/assets/avatargn.png" alt="">
         <p><a href="https://www.instagram.com/guisous4__/" target="_blank"><b>@guisous4__</b></a></p>
       </div>
+      <div id="switch">
+        <button>
+
+        </button>
+        <span></span>
+      </div>
       <div id="lista">
         <ul>
-          <a href="#" target="_blank"><li>Inscreva-se no NLW</li></a>
-          <a href="#" target="_blank"><li>Baixe meu e-book</li></a>
-          <a href="#" target="_blank"><li>Veja meu portifólio</li></a>
-          <a href="#" target="_blank"><li>Conheça o explorer</li></a>
+          <li><a href="#" target="_blank">Inscreva-se no NLW</a></li>
+          <li><a href="#" target="_blank">Baixe meu e-book</a></li>
+          <li><a href="#" target="_blank">Veja meu portifólio</a></li>
+          <li><a href="#" target="_blank">Conheça o explorer</a></li>
         </ul>
       </div>
+      <div id="social-links">
+        <a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+        <a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+        <a href="#" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+        <a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+      </div>
+
+      <footer>
+        <p>Feito com ♥ pela <a href="https://app.rocketseat.com.br/" target="_blank">Rocketseat</a></p>
+      </footer>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
