--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto Rocketseat</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-    <div id="container">
-      <div id="profile">
-        <img src="assets/assets/avatargn.png" alt="">
-        <p><a href="https://www.instagram.com/guisous4__/" target="_blank"><b>@guisous4__</b></a></p>
-      </div>
-      <div id="switch">
-        <button>
+<html lang="pt-br" class="light"> 
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div id="container">
+  <div id="profile">
+    <img src="assets/assets/avatargn.png" alt="Lindo, tesão, bonito e gostosão.">
+    <p><a href="#" target="_blank">@guisous4.__</a></p>
+  </div>
+  <div id="switch" onclick="toggleMode()">
+    <button>
+      
+    </button>
+    <span>
 
-        </button>
-        <span></span>
-      </div>
-      <div id="lista">
-        <ul>
-          <li><a href="#" target="_blank">Inscreva-se no NLW</a></li>
-          <li><a href="#" target="_blank">Baixe meu e-book</a></li>
-          <li><a href="#" target="_blank">Veja meu portifólio</a></li>
-          <li><a href="#" target="_blank">Conheça o explorer</a></li>
-        </ul>
-      </div>
-      <div id="social-links">
-        <a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-        <a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="#" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-        <a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-      </div>
-
-      <footer>
-        <p>Feito com ♥ pela <a href="https://app.rocketseat.com.br/" target="_blank">Rocketseat</a></p>
-      </footer>
-    </div>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  </body>
+    </span>
+  </div>
+  <div id="lista">
+    <ul>
+      <li><a href="#" target="_blank">Inscrever-se no NLW</a></li>
+      <li><a href="#" target="_blank">Baixar meu e-book</a></li>
+      <li><a href="#" target="_blank">Veja meu portfólio</a></li>
+      <li><a href="#" target="_blank">Conheca o explorer</a></li>
+    </ul>
+  </div>
+  <div id="social-links">
+    <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+    <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+    <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+  </div>
+  <footer>
+    <p> Feito com ❤️</p>
+  </footer>
+  </div>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="script.js"></script>
+</body>
 </html>
