--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="assets/assets/avatargn.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portal do 00🏅</title>
 </head>
 <body>
   <div id="container">
   <div id="profile">
     <img src="assets/assets/avatargn.png" alt="Lindo, tesão, bonito e gostosão.">
-    <p><a href="#" target="_blank">@guisous4.__</a></p>
+    <p>Guilherme de Sousa Nascimento</p>
   </div>
   <div id="switch" onclick="toggleMode()">
     <button>
@@ -25,17 +26,17 @@
   </div>
   <div id="lista">
     <ul>
-      <li><a href="#" target="_blank">Inscrever-se no NLW</a></li>
-      <li><a href="#" target="_blank">Baixar meu e-book</a></li>
-      <li><a href="#" target="_blank">Veja meu portfólio</a></li>
-      <li><a href="#" target="_blank">Conheca o explorer</a></li>
+      <li><a href="https://guilhermelangolango.github.io/Guilhermesousa/" target="_blank">Nau digital</a></li>
+      <li><a href="https://www.instagram.com/guisous4.__/" target="_blank">Instagram privado</a></li>
+      <li><a href="#" onclick="toggleModeum()">Veja meu portfólio</a></li>
+      <li><a href="https://www.xvideos.com/tags/xvideos-com-br" target="_blank">🔞Conheça o paraiso🔞</a></li>
     </ul>
   </div>
   <div id="social-links">
-    <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-    <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-    <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+    <a href="https://github.com/Guilhermelangolango" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+    <a href="https://www.google.com/maps/place/Times+Square/@40.7572056,-73.9897959,3a,75y,111.43h,96.1t/data=!3m6!1e1!3m4!1syyvvDeDQhN-fvCHam1B9oQ!2e0!7i16384!8i8192!4m7!3m6!1s0x89c25855c6480299:0x55194ec5a1ae072e!8m2!3d40.7579747!4d-73.9855426!10e5!16zL20vMDdxZHI?entry=ttu" target="_blank"><ion-icon name="location"></ion-icon></a>
+    <a href="https://www.linkedin.com/in/guilherme-nascimento-9475a1260/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+    <a href="https://web.whatsapp.com/send?phone=5586999628958" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
   </div>
   <footer>
     <p> Feito com ❤️</p>
